tools/document-pii/src/snapshots/document_pii__tests__find_rs_files.snap
---
source: tools/document-pii/src/main.rs
expression: rust_file_paths
---
[
    "../../tests/test_pii_docs/src/anothermod.rs",
    "../../tests/test_pii_docs/src/main.rs",
]
