tools/document-pii/src/snapshots/document_pii__tests__output.snap
---
source: tools/document-pii/src/main.rs
expression: output
---
[
    "MyStruct.foo",
    "MyStruct.sub_struct.field2",
    "SubStruct.field2",
]
