tools/document-pii/src/snapshots/document_pii__tests__pii_all.snap
---
source: tools/document-pii/src/main.rs
expression: output
---
[
    "FooBar.not_sensitive",
    "HasGeneric.maybe_sensitive_stuff",
    "InnerGeneric.bitcoin_wallet_key",
    "MyStruct.foo",
    "MyStruct.sub_struct.field2",
    "MyStruct.sub_struct.mystery_field.bitcoin_wallet_key",
    "MyStruct.sub_struct.mystery_field.maybe_sensitive_stuff",
    "SelfReferential.pretty_sensitive",
    "SubStruct.field2",
    "SubStruct.mystery_field.bitcoin_wallet_key",
    "SubStruct.mystery_field.maybe_sensitive_stuff",
]
