tools/document-pii/src/snapshots/document_pii__tests__pii_false.snap
---
source: tools/document-pii/src/main.rs
expression: output
---
[
    Output {
        path: "FooBar.not_sensitive",
        attributes: {
            "pii": Some(
                "false",
            ),
        },
    },
]
