tools/document-pii/src/snapshots/document_pii__tests__pii_retain_additional_properties_truth_table.snap
---
source: tools/document-pii/src/main.rs
expression: output
---
[
    Output {
        path: "TruthTableTest.baz",
        additional_properties: false,
    },
    Output {
        path: "TruthTableTest.foo",
        additional_properties: true,
    },
    Output {
        path: "TruthTableTest.qux",
        additional_properties: false,
    },
]
