tools/document-pii/src/snapshots/document_pii__tests__scoped_paths.snap
---
source: tools/document-pii/src/main.rs
expression: scoped_paths
---
{
    "test_pii_docs": {
        "test_pii_docs::HasGeneric",
        "test_pii_docs::InnerGeneric",
        "test_pii_docs::MyStruct",
        "test_pii_docs::SelfReferential",
        "test_pii_docs::SubStruct",
    },
    "test_pii_docs::anothermod": {
        "test_pii_docs::anothermod::BarFoo",
        "test_pii_docs::anothermod::FooBar",
        "test_pii_docs::anothermod::WeirdType",
        "test_pii_docs::anothermod::WeirdTypes",
    },
}
