tools/document-pii/src/snapshots/document_pii__tests__single_type.snap
---
source: tools/document-pii/src/main.rs
expression: output
---
[
    Pii {
        path: "SubStruct.field2",
    },
    Pii {
        path: "SubStruct.mystery_field.bitcoin_wallet_key",
    },
]
